Update character images and links
Updated character images and fixed links in characters.html.

--- a/characters.html
+++ b/characters.html
@@ -23,19 +23,19 @@
 <main>
     <section class="cards">
         <div class="card">
-            <img src="https://static.wikia.nocookie.net/the-legend-of-zelda-botw/images/c/c8/BotW_Link.png/revision/latest?cb=20200902181658" alt="Link">
+            <img src="Link.png" alt="Link">
             <h3>Link</h3>
             <p>Храбрый герой, избранный судьбой и богиней Хайлии.В тишине и без слов он встаёт против тьмы, чтобы защитить Хайрул и возродить надежду.</p>
             <button onclick="window.open('https://zelda.fandom.com/ru/wiki/Линк_(Link)', '_blank');"> Подробнее</button>
         </div>
         <div class="card">
-            <img src="https://static.wikia.nocookie.net/zelda_gamepedia_en/images/c/c9/TotK_Princess_Zelda_Artwork.png/revision/latest?cb=20240929143055" alt="Zelda">
+            <img src="Zelda.png" alt="Zelda">
             <h3>Zelda</h3>
             <p>Мудрая и отважная принцесса Хайрула,потомок древней богини.В её сердце живёт свет,способный рассеять тьму и направить героя.</p>
             <button onclick="window.open('https://zelda.fandom.com/ru/wiki/Принцесса_Зельда_(Princess_Zelda)', '_blank');"> Подробнее</button>
         </div>
         <div class="card">
-            <img src="https://static.wikia.nocookie.net/zelda_gamepedia_en/images/6/66/TotK_Ganondorf.png/revision/latest?cb=20230513141802" alt="Ganodorf">
+            <img src="TotK_Ganondorf.png" alt="Ganodorf">
             <h3>Ganondorf</h3>
             <p>Повелитель тьмы и воплощение злобы. Его жажда власти безгранична, а сила способна разрушить само равновесие мира.</p>
             <br>
@@ -49,3 +49,4 @@
 </footer>
 </body>
 </html>
+
