--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 
     <main>
   <section class="hero">
+<div class="video-background">
   <video autoplay muted loop playsinline id="bg-video">
     <source src="hyrule.mp4" type="video/mp4">
   </video>
+  </div>
 
   <div class="hero-content">
     <h2>Добро пожаловать в мир Hyrule</h2>
