--- a/games.html
+++ b/games.html
@@ -3,39 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Игры серии | The Legend of Zelda</title>
+    <title>Игры серии - The Legend of Zelda</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.png">
-    <script src="script.js"></script>
-
 </head>
 <body>
-<header>
-    <h1>Игры серии</h1>
-    <nav>
-        <a href="index.html">Главная</a>
-        <a href="characters.html">Персонажи</a>
-        <a href="world.html">Мир</a>
-        <a href="games.html" class="active">Игры</a>
-        <a href="gallery.html">Галерея</a>
-    </nav>
-</header>
+    <header>
+        <h1>The Legend of Zelda</h1>
+        <nav>
+            <a href="index.html">Главная</a>
+            <a href="characters.html">Персонажи</a>
+            <a href="world.html">Мир</a>
+            <a href="games.html">Игры</a>
+            <a href="gallery.html">Галерея</a>
+        </nav>
+    </header>
 
-<main>
-    <section class="list">
-        <ul>
-            <li><b>The Legend of Zelda</b> (1986)</li>
-            <li><b>Ocarina of Time</b> (1998)</li>
-            <li><b>Majora’s Mask</b> (2000)</li>
-            <li><b>Twilight Princess</b> (2006)</li>
-            <li><b>Breath of the Wild</b> (2017)</li>
-            <li><b>Tears of the Kingdom</b> (2023)</li>
-        </ul>
-    </section>
-</main>
+    <main class="games-page">
+        <h2>Игры серии The Legend of Zelda</h2>
+        <div class="games-list">
+            <a href="https://ru.wikipedia.org/wiki/The_Legend_of_Zelda_(игра,_1986)" target="_blank" class="game">
+                The Legend of Zelda (1986)
+            </a>
 
-<footer>
-    <p>2025 The Legend of Zelda Fan Site  made by Ksywo (its a college project)</p>
-</footer>
+            <a href="https://ru.wikipedia.org/wiki/The_Legend_of_Zelda:_Ocarina_of_Time" target="_blank" class="game">
+                Ocarina of Time (1998)
+            </a>
+
+            <a href="https://ru.wikipedia.org/wiki/The_Legend_of_Zelda:_Majora’s_Mask" target="_blank" class="game">
+                Majora’s Mask (2000)
+            </a>
+
+            <a href="https://ru.wikipedia.org/wiki/The_Legend_of_Zelda:_The_Wind_Waker" target="_blank" class="game">
+                The Wind Waker (2002)
+            </a>
+
+            <a href="https://ru.wikipedia.org/wiki/The_Legend_of_Zelda:_Twilight_Princess" target="_blank" class="game">
+                Twilight Princess (2006)
+            </a>
+
+            <a href="https://ru.wikipedia.org/wiki/The_Legend_of_Zelda:_Breath_of_the_Wild" target="_blank" class="game">
+                Breath of the Wild (2017)
+            </a>
+
+            <a href="https://ru.wikipedia.org/wiki/The_Legend_of_Zelda:_Tears_of_the_Kingdom" target="_blank" class="game">
+                Tears of the Kingdom (2023)
+            </a>
+        </div>
+    </main>
+
+    <footer>
+        <p>2025 The Legend of Zelda Fan Site — made by Ksywo (college project)</p>
+    </footer>
 </body>
 </html>
