--- a/games.html
+++ b/games.html
@@ -53,7 +53,8 @@
     </main>
 
     <footer>
-        <p>2025 The Legend of Zelda Fan Site — made by Ksywo (college project)</p>
+        <p>2025 The Legend of Zelda Fan Site made by Ksywo (its a college project)</p>
     </footer>
 </body>
 </html>
+
