--- a/games.html
+++ b/games.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        <h1>The Legend of Zelda</h1>
+        <h1 class="site-title">
+        <img src="zeldaico.png" alt="Zelda Icon" class="logo-icon">
+         The Legend of Zelda
+        </h1>
         <nav>
             <a href="index.html">Главная</a>
             <a href="characters.html">Персонажи</a>
@@ -53,8 +56,7 @@
     </main>
 
     <footer>
-        <p>2025 The Legend of Zelda Fan Site made by Ksywo (its a college project)</p>
+        <p>2025 The Legend of Zelda Fan Site — made by Ksywo (college project)</p>
     </footer>
 </body>
 </html>
-
