--- a/games.html
+++ b/games.html
@@ -25,7 +25,7 @@
     <main class="games-page">
         <h2>Игры серии The Legend of Zelda</h2>
         <div class="games-list">
-            <a href="https://ru.wikipedia.org/wiki/The_Legend_of_Zelda_(игра,_1986)" target="_blank" class="game">
+            <a href="https://ru.wikipedia.org/wiki/The_Legend_of_Zelda_(игра)" target="_blank" class="game">
                 The Legend of Zelda (1986)
             </a>
 
